Fix HTML structure and ensure valid syntax

--- a/wifi trasfere.html
+++ b/wifi trasfere.html
@@ -28,11 +28,11 @@
             margin-bottom: 20px;
         }
         .info-box {
-            background-color: #e6f0ff;
-            border: 1px solid #cce0ff;
-            padding: 15px;
-            border-radius: 8px;
-            margin-bottom: 25px;
+            <div class="info-box">
+    <p>Seu Dispositivo está em Modo Servidor.</p>
+    <p>Acesse pelo navegador do seu PC/Mac:</p>
+    <p style="color: #d9534f; font-size: 1.5em; margin-top: 10px;">http://[SEU IP LOCAL]:8080</p>
+</div>
         }
         .info-box p {
             margin: 5px 0;
@@ -147,4 +147,5 @@
         <p style="margin-top: 30px; font-size: 0.8em; color: #999;">Serviço providenciado pelo seu aplicativo de transferência Wi-Fi.</p>
     </div>
 </body>
+
 </html>
